[gd_scene load_steps=3 format=4 uid="uid://h05xap187a4v"]

[ext_resource type="Script" path="res://levels/base_level.gd" id="1_6goh0"]
[ext_resource type="TileSet" uid="uid://cesbroxjsjdnp" path="res://levels/tileset.tres" id="1_aqkfs"]

[node name="BaseLEvel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6goh0")

[node name="Ground" type="TileMapLayer" parent="."]
z_index = -100
position = Vector2(0, 40)
scale = Vector2(0.8, 0.8)
tile_map_data = PackedByteArray("AAAAAAEAAQABAAcAAAAAAAIAAQABAAcAAAAAAAMAAQABAAcAAAAAAAQAAQABAAcAAAABAAEAAQABAAcAAAABAAIAAQABAAcAAAABAAMAAQABAAcAAAABAAQAAQABAAcAAAACAAEAAQABAAcAAAACAAIAAQABAAcAAAACAAMAAQABAAcAAAACAAQAAQABAAcAAAAGAAEAAQABAAIAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAEAAAAGAAQAAQAAAAEAAAAGAAUAAQAAAAEAAAAGAAYAAQAAAAEAAAAGAAcAAQAEAAEAAAAGAAgAAQABAAcAAAAGAAkAAQABAAcAAAAGAAoAAQABAAcAAAAHAAEAAQABAAIAAAAHAAIAAQABAAAAAAAHAAMAAQABAAcAAAAHAAQAAQABAAcAAAAHAAUAAQABAAcAAAAHAAYAAQABAAcAAAAHAAcAAQABAAcAAAAHAAgAAQABAAcAAAAHAAkAAQABAAcAAAAHAAoAAQABAAcAAAAIAAEAAQABAAIAAAAIAAIAAQABAAAAAAAIAAMAAQABAAcAAAAIAAQAAQABAAcAAAAIAAUAAQABAAcAAAAIAAYAAQABAAcAAAAIAAcAAQABAAcAAAAIAAgAAQABAAcAAAAIAAkAAQABAAcAAAAIAAoAAQABAAcAAAAJAAEAAQABAAIAAAAJAAIAAQACAAAAAAAJAAMAAQAMAAoAAAAJAAQAAQAMAAoAAAAJAAUAAQAMAAoAAAAJAAYAAQAMAAoAAAAJAAcAAQAMAAoAAAAJAAgAAQAMAAoAAAAJAAkAAQANAAoAAAAJAAoAAQAWAAYAAAAKAAEAAQAEAAAAAAAKAAIAAQAAAAEAAAAKAAMAAQAKAAoAAAAKAAQAAQAKAAoAAAAKAAUAAQAKAAoAAAAKAAYAAQAKAAoAAAAKAAcAAQAKAAoAAAAKAAgAAQAKAAsAAAAKAAkAAQALAAkAAAAKAAoAAQAWAAYAAAALAAEAAQABAAEAAAALAAIAAQABAAEAAAALAAMAAQAWAAYAAAALAAQAAQAWAAYAAAALAAUAAQAWAAYAAAALAAYAAQAWAAYAAAALAAcAAQAWAAYAAAALAAgAAQALAAsAAAALAAkAAQALAAkAAAALAAoAAQAWAAYAAAAMAAEAAQABAAEAAAAMAAIAAQABAAEAAAAMAAMAAQAWAAYAAAAMAAQAAQAWAAYAAAAMAAUAAQAWAAYAAAAMAAYAAQAWAAYAAAAMAAcAAQAWAAYAAAAMAAgAAQALAAsAAAAMAAkAAQALAAkAAAAMAAoAAQAWAAYAAAANAAEAAQABAAEAAAANAAIAAQABAAEAAAANAAMAAQAWAAYAAAANAAQAAQAWAAYAAAANAAUAAQAWAAYAAAANAAYAAQAWAAYAAAANAAcAAQAWAAYAAAANAAgAAQALAAsAAAANAAkAAQALAAkAAAANAAoAAQAWAAYAAAAOAAEAAQABAAEAAAAOAAIAAQABAAEAAAAOAAMAAQAWAAYAAAAOAAQAAQAWAAYAAAAOAAUAAQAWAAYAAAAOAAYAAQAWAAYAAAAOAAcAAQAWAAYAAAAOAAgAAQALAAsAAAAOAAkAAQALAAkAAAAOAAoAAQAWAAYAAAAAAAAAAQABAAcAAAABAAAAAQABAAcAAAACAAAAAQABAAcAAAADAAAAAQABAAcAAAAEAAAAAQABAAcAAAAFAAAAAQABAAcAAAAGAAAAAQABAAcAAAAHAAAAAQABAAcAAAAIAAAAAQABAAcAAAAJAAAAAQABAAcAAAAKAAAAAQABAAcAAAALAAAAAQABAAcAAAAMAAAAAQABAAcAAAANAAAAAQABAAcAAAAOAAAAAQABAAcAAAAPAAAAAQABAAcAAAAPAAEAAQABAAcAAAAPAAIAAQABAAcAAAAQAAIAAQABAAcAAAAQAAMAAQAWAAYAAAARAAMAAQAWAAYAAAASAAMAAQAWAAYAAAASAAIAAQABAAcAAAARAAIAAQABAAcAAAAQAAEAAQABAAcAAAAQAAAAAQABAAcAAAARAAAAAQABAAcAAAASAAAAAQABAAcAAAASAAEAAQABAAcAAAARAAEAAQABAAcAAAAPAAMAAQAWAAYAAAAPAAgAAQALAAsAAAAQAAgAAQALAAsAAAARAAgAAQALAAsAAAASAAgAAQALAAsAAAAPAAkAAQALAAkAAAAQAAkAAQALAAkAAAARAAkAAQALAAkAAAASAAkAAQALAAkAAAAPAAQAAQAWAAYAAAAPAAUAAQAWAAYAAAAPAAYAAQAWAAYAAAAPAAcAAQAWAAYAAAAQAAQAAQAWAAYAAAAQAAUAAQAWAAYAAAAQAAYAAQAWAAYAAAAQAAcAAQAWAAYAAAARAAQAAQAWAAYAAAARAAUAAQAWAAYAAAARAAYAAQAWAAYAAAARAAcAAQAWAAYAAAASAAQAAQAWAAYAAAASAAUAAQAWAAYAAAASAAYAAQAWAAYAAAASAAcAAQAWAAYAAAAPAAoAAQAWAAYAAAAQAAoAAQAWAAYAAAARAAoAAQAWAAYAAAASAAoAAQAWAAYAAAAAAP//AQABAAcAAAABAP//AQABAAcAAAACAP//AQABAAcAAAADAP//AQABAAcAAAAEAP//AQABAAcAAAAFAP//AQABAAcAAAAGAP//AQABAAcAAAAHAP//AQABAAcAAAAIAP//AQABAAcAAAAJAP//AQABAAcAAAAKAP//AQABAAcAAAALAP//AQABAAcAAAAMAP//AQABAAcAAAANAP//AQABAAcAAAAOAP//AQABAAcAAAAPAP//AQABAAcAAAAQAP//AQABAAcAAAARAP//AQABAAcAAAASAP//AQABAAcAAAABAAUAAQABAAcAAAABAAYAAQABAAcAAAABAAcAAQABAAcAAAABAAgAAQABAAcAAAABAAkAAQABAAcAAAABAAoAAQABAAcAAAACAAUAAQABAAcAAAACAAYAAQADAAAAAAACAAcAAQACAAEAAAACAAgAAQACAAEAAAACAAkAAQACAAEAAAACAAoAAQACAAEAAAADAAUAAQABAAcAAAADAAYAAQABAAIAAAADAAcAAQAAAAAAAAADAAgAAQAAAAEAAAADAAkAAQAAAAEAAAADAAoAAQAAAAEAAAAEAAUAAQABAAcAAAAEAAYAAQABAAIAAAAEAAcAAQABAAAAAAAEAAgAAQABAAcAAAAEAAkAAQABAAcAAAAEAAoAAQABAAcAAAAFAAUAAQACAAEAAAAFAAYAAQACAAIAAAAFAAcAAQABAAAAAAAFAAgAAQABAAcAAAAFAAkAAQABAAcAAAAFAAoAAQABAAcAAAAEAAEAAQABAAcAAAAEAAIAAQABAAcAAAAEAAMAAQABAAcAAAAEAAQAAQABAAcAAAAFAAEAAQADAAAAAAAFAAIAAQACAAEAAAAFAAMAAQACAAEAAAAFAAQAAQACAAEAAAADAAEAAQABAAcAAAADAAIAAQABAAcAAAADAAQAAQABAAcAAAADAAMAAQABAAcAAAAAAAUAAQABAAcAAAAAAAYAAQABAAcAAAAAAAcAAQABAAcAAAAAAAgAAQABAAcAAAAAAAkAAQABAAcAAAAAAAoAAQABAAcAAAA=")
tile_set = ExtResource("1_aqkfs")

[node name="TowerPlacesBackup" type="TileMapLayer" parent="."]
visible = false
position = Vector2(-38, -26)
tile_map_data = PackedByteArray("AAABAAQAAQATAAEAAAAGAAQAAQATAAEAAAAGAAMAAQATAAEAAAAGAAUAAQATAAEAAAAGAAYAAQATAAEAAAAGAAcAAQATAAEAAAAFAAcAAQATAAEAAAAEAAcAAQATAAEAAAAJAAEAAQATAAEAAAAJAAMAAQATAAQAAAAJAAQAAQATAAQAAAAJAAUAAQATAAQAAAAJAAYAAQATAAQAAAAKAAYAAQATAAQAAAALAAYAAQATAAQAAAAMAAYAAQATAAQAAAANAAYAAQATAAQAAAAOAAYAAQATAAQAAAABAAUAAQATAAEAAAABAAYAAQATAAEAAAABAAcAAQATAAEAAAACAAQAAQATAAEAAAADAAEAAQATAAEAAAADAAIAAQATAAEAAAADAAMAAQATAAEAAAADAAQAAQATAAEAAAAJAAIAAQATAAEAAAA=")
tile_set = ExtResource("1_aqkfs")

[node name="TowerPlaces" type="TileMapLayer" parent="."]
position = Vector2(-38, -26)
tile_set = ExtResource("1_aqkfs")

[node name="HoveredBackup" type="TileMapLayer" parent="."]
visible = false
position = Vector2(-38, -26)
tile_map_data = PackedByteArray("AAABAAQAAQAWAAEAAAAGAAQAAQAWAAEAAAAGAAMAAQAWAAEAAAAGAAUAAQAWAAEAAAAGAAYAAQAWAAEAAAAGAAcAAQAWAAEAAAAFAAcAAQAWAAEAAAAEAAcAAQAWAAEAAAAEAAAAAQAWAAEAAAAFAAAAAQAWAAEAAAAGAAAAAQAWAAEAAAAHAAAAAQAWAAEAAAAIAAAAAQAWAAEAAAAJAAEAAQAWAAEAAAAJAAMAAQAWAAQAAAAJAAQAAQAWAAQAAAAJAAUAAQAWAAQAAAAJAAYAAQAWAAQAAAAKAAYAAQAWAAQAAAALAAYAAQAWAAQAAAAMAAYAAQAWAAQAAAANAAYAAQAWAAQAAAAOAAYAAQAWAAQAAAABAAUAAQAWAAEAAAABAAYAAQAWAAEAAAABAAcAAQAWAAEAAAACAAQAAQAWAAEAAAADAAEAAQAWAAEAAAADAAIAAQAWAAEAAAADAAMAAQAWAAEAAAADAAQAAQAWAAEAAAAJAAIAAQAWAAEAAAA=")
tile_set = ExtResource("1_aqkfs")

[node name="Hovered" type="TileMapLayer" parent="."]
position = Vector2(-38, -26)
tile_set = ExtResource("1_aqkfs")

[node name="ObjectsBackup" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAEAAgAAQAPAAUAAAAAAAIAAQAPAAUAAAAKAAEAAQATAAUAAAAKAAQAAQATAAAAAAAMAAUAAQATAAAAAAABAAQAAQAVAAAAAAABAAgAAQAVAAAAAAAEAAQAAQAUAAAAAAAIAAcAAQAUAAAAAAAHAAEAAQAUAAAAAAAOAAcAAQAUAAAAAAACAAgAAQAUAAAAAAAHAAcAAQAUAAAAAAAIAAYAAQAUAAAAAAAKAAUAAQAVAAUAAAAOAAQAAQAWAAUAAAAMAAMAAQAWAAUAAAABAAMAAQAQAAUAAAAAAAcAAQAQAAUAAAAFAAgAAQAQAAUAAAAGAAgAAQARAAUAAAAMAAEAAQASAAUAAAAOAAIAAQAQAAUAAAACAAIAAQARAAUAAAAAAAUAAQARAAUAAAAGAAQAAQARAAUAAAADAAEAAQAQAAUAAAAJAAIAAQARAAUAAAAOAAEAAQARAAUAAAABAAEAAQARAAUAAAACAAEAAQAQAAUAAAACAAMAAQAQAAUAAAAAAAYAAQAQAAUAAAA=")
tile_set = ExtResource("1_aqkfs")

[node name="Objects" type="TileMapLayer" parent="."]
tile_set = ExtResource("1_aqkfs")
